# gitignore-cli-tddschn

./: .bumpversion.cfg  README.md  pyproject.toml
gitignore_cli_tddschn/: __init__.py  cli.py
tests/: test_gitignore_cli_tddschn.py
